openshift/verify-access-runtime-template.yaml
apiVersion: v1
kind: Template
labels:
  template: verify-access-runtime
metadata:
  creationTimestamp: null
  name: verify-access-runtime
  annotations:
    openshift.io/display-name: IBM Security Verify Access Runtime
    iconClass: icon-sso
    description: IBM Security Verify Access Runtime Services
    openshift.io/long-description: This template deploys the runtime services required for an IBM
      Security Verify Access environment.
    openshift.io/documentation-url: https://ibm.biz/verifyaccesscontainers
    openshift.io/provider-display-name: IBM Security Verify Access
    openshift.io/support-url: https://ibm.biz/iamcommunity
    tags: ibm, verifyaccess
message: |-

  Application Name: ${APP_NAME}

  The following services have been created in your project:
    - ${RUNTIME_SERVICE}
objects:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
    creationTimestamp: null
    generation: 1
    labels:
      app: ${APP_NAME}
      name: ${APP_NAME}-runtime
    name: ${APP_NAME}-runtime
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        name: ${APP_NAME}-runtime
    triggers:
      - type: ConfigChange
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: ${APP_NAME}
          name: ${APP_NAME}-runtime
      spec:
        affinity:
          podAntiAffinity:
            preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                  - key: name
                    operator: In
                    values:
                    - ${APP_NAME}-runtime
                topologyKey: kubernetes.io/hostname
        serviceAccountName: ${SERVICE_ACCOUNT}
        securityContext:
          runAsNonRoot: true
          runAsUser:    6000
        containers:
        - env:
          - name: CONTAINER_TIMEZONE
            value: ${TIMEZONE}
          - name: CONFIG_SERVICE_URL
            valueFrom:
              secretKeyRef:
                name: ${APP_NAME}-config
                key: config-service-url
          - name: CONFIG_SERVICE_USER_NAME
            valueFrom:
              secretKeyRef:
                name: ${APP_NAME}-config
                key: config-read-username
          - name: CONFIG_SERVICE_USER_PWD
            valueFrom:
              secretKeyRef:
                name: ${APP_NAME}-config
                key: config-read-password
          image: docker.io/ibmcom/verify-access-runtime:${ISVA_VERSION}
          imagePullPolicy: IfNotPresent
          name: ${APP_NAME}-runtime
          ports:
          - containerPort: 9443
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          livenessProbe:
            exec:
              command:
              - /sbin/health_check.sh
              - livenessProbe
            initialDelaySeconds: 90
            periodSeconds: 10
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              scheme: HTTPS
              port: 9443
              path: /sps/static/ibm-logo.png
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
          volumeMounts:
          - mountPath: /var/application.logs
            name: ${APP_NAME}-runtime-logs
        dnsPolicy: ClusterFirst
        imagePullSecrets:
        - name: ${PULL_SECRET}
        restartPolicy: Always
        schedulerName: default-scheduler
        terminationGracePeriodSeconds: 30
        volumes:
        - name: ${APP_NAME}-runtime-logs
          emptyDir: {}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: null
    name: ${RUNTIME_SERVICE}
    labels:
      app: ${APP_NAME}
      name: ${APP_NAME}-runtime
  spec:
    ports:
    - name: https
      port: 9443
      protocol: TCP
      targetPort: 9443
    selector:
      name: ${APP_NAME}-runtime
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
parameters:
  - displayName: Application Name
    description: This is the name for the application which is used to create unique object names in the cluster.
    name: APP_NAME
    value: verifyaccess
  - displayName: Verify Access Image Version
    description: The tag that will be used to pull the ibmcom/verify-access images.
    name: ISVA_VERSION
    value: 10.0.2.0
  - displayName: Runtime Service Name
    description: The name for the runtime service.  Also used as the hostname for connections within the cluster.
    name: RUNTIME_SERVICE
    value: isvaruntime
  - displayName: Image Pull Secret
    description: This is an (existing) docker login secret for pulling the Access Manager image.
      Only required if hosting images on a private repository
    name: PULL_SECRET
    value: dockerlogin
  - displayName: Timezone
    description: The timezone for message logging (e.g. Europe/London)
    name: TIMEZONE
    value: Etc/UTC
  - displayName: Runtime Service Account
    description: This is the (existing) Service Account for running the Runtime pods.  Needs to support running as specific non-root userid.
    name: SERVICE_ACCOUNT
    value: verifyaccess-nonroot
