openshift/lmi-route.yaml
apiVersion: v1
kind: Route
metadata:
  creationTimestamp: null
  name: verifyaccess-lmi
  labels:
    app: verifyaccess-core
spec:
  host: lmi.iamlab.ibm.com
  port:
    targetPort: lmi
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: passthrough
  to:
    kind: Service
    name: isvaconfig
    weight: 100
  wildcardPolicy: None
